--- a/app/src/main/res/drawable/calendaricon.xml
+++ b/app/src/main/res/drawable/calendaricon.xml
@@ -8,27 +8,27 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#306BA0"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M3.75,12.5V7.5C3.75,6.119 4.869,5 6.25,5H8.75"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#306BA0"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M8.75,2.5V7.5"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#306BA0"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M26.25,12.5V7.5C26.25,6.119 25.131,5 23.75,5H23.125"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#306BA0"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
 </vector>
