--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -4,38 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     tools:context=".AddCategory">
 
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/_5sdp">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="@dimen/_11sdp"
+            android:layout_height="@dimen/_11sdp"
+            android:layout_marginLeft="@dimen/_18sdp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:layout_gravity="center"
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_32sdp"
+            android:text="Add Category"
+            android:textSize="@dimen/_20sdp"
+            android:textColor="@color/black"
+            android:gravity="center_vertical"
+            android:fontFamily="@font/handosoftbold"/>
+
+        <ImageView
+            android:id="@+id/upload"
+            android:layout_gravity="end"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_20sdp"
+            android:src="@drawable/save" />
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <LinearLayout
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_25sdp"
         android:gravity="center"
         android:orientation="vertical">
-        <ImageView
-            android:id="@+id/CatgoryImage"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_100sdp"/>
+        <EditText
+            android:id="@+id/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:textColorHint="#BCBCBC"
+            android:textColor="@color/black"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginEnd="@dimen/_30sdp"
+            android:hint="Enter category name" />
+
         <Button
             android:id="@+id/uploadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Upload Image"
-            android:layout_marginBottom="@dimen/_30sdp" />
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/handosoftbold" />
 
-        <EditText
-            android:id="@+id/EditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:hint="Category Name"
-            android:minHeight="48dp" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Upload"
-            android:id="@+id/upload"/>
+        <ImageView
+            android:layout_marginTop="@dimen/_10sdp"
+            android:id="@+id/CatgoryImage"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_100sdp" />
+
+
 
     </LinearLayout>
 
