--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dashboard">
+    tools:context=".Dashboard"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +31,7 @@
                 android:layout_margin="@dimen/_5sdp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:elevation="@dimen/_5sdp"
+                app:cardElevation="1dp"
                 app:cardCornerRadius="@dimen/_3sdp">
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -65,7 +66,6 @@
                     android:background="@drawable/radius_border_blue"/>
 
             </LinearLayout>
-
 
         </LinearLayout>
 
