--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,14 +7,14 @@
     android:layout_gravity="center"
     android:gravity="center"
     tools:context=".Register"
-    android:background="@color/primaryblue">
+    android:background="@color/fontblue">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginRight="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -32,30 +32,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:gravity="center">
-<!--                    <TextView-->
-<!--                        android:id="@+id/email"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="end"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:gravity="center_vertical"-->
-<!--                        android:text="Email: "-->
-<!--                        android:textColor="@color/white"-->
-<!--                        android:textSize="@dimen/_15sdp"-->
-<!--                        android:fontFamily="@font/handosoftbold"/>-->
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                    <!--                    <TextView-->
+                    <!--                        android:id="@+id/email"-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:layout_gravity="end"-->
+                    <!--                        android:layout_weight="1"-->
+                    <!--                        android:gravity="center_vertical"-->
+                    <!--                        android:text="Email: "-->
+                    <!--                        android:textColor="@color/white"-->
+                    <!--                        android:textSize="@dimen/_15sdp"-->
+                    <!--                        android:fontFamily="@font/handosoftbold"/>-->
                     <TextView
                         android:id="@+id/EditText_email"
                         android:layout_width="wrap_content"
@@ -77,9 +80,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:gravity="center"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="@dimen/_10sdp">
+                    android:orientation="horizontal">
                     <!--                    <TextView-->
                     <!--                        android:id="@+id/name"-->
                     <!--                        android:layout_width="wrap_content"-->
@@ -105,9 +108,10 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/bdayselection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
                     <!--                    <TextView-->
                     <!--                        android:id="@+id/DateOfBirth"-->
                     <!--                        android:layout_width="wrap_content"-->
@@ -122,14 +126,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="@dimen/_10sdp">
+                        android:orientation="horizontal">
 
                         <EditText
                             android:id="@+id/EditText_dob"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:backgroundTint="@color/white"
+                            android:backgroundTint="@android:color/transparent"
                             android:ems="13"
                             android:focusable="false"
                             android:fontFamily="@font/handosoftbold"
@@ -143,53 +146,71 @@
                         <ImageView
                             android:id="@+id/calendar"
                             android:layout_width="@dimen/_23sdp"
-                            android:layout_gravity="center_vertical"
                             android:layout_height="@dimen/_23sdp"
+                            android:layout_gravity="center_vertical"
                             android:src="@drawable/calendaricon" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_10sdp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_below="@id/calendar"
+                            android:background="@color/white" />
+
 
                     </LinearLayout>
                 </LinearLayout>
+
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-<!--                    <TextView-->
-<!--                        android:id="@+id/Gender"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="center"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:gravity="center_vertical"-->
-<!--                        android:text="Gender: "-->
-<!--                        android:textColor="@color/black"-->
-<!--                        android:textSize="@dimen/_18sdp" />-->
+                    <!--                    <TextView-->
+                    <!--                        android:id="@+id/Gender"-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:layout_gravity="center"-->
+                    <!--                        android:layout_weight="1"-->
+                    <!--                        android:gravity="center_vertical"-->
+                    <!--                        android:text="Gender: "-->
+                    <!--                        android:textColor="@color/black"-->
+                    <!--                        android:textSize="@dimen/_18sdp" />-->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center_horizontal">
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="horizontal">
+
                         <RadioGroup
                             android:id="@+id/rbgroup"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
+
                             <RadioButton
                                 android:id="@+id/rbMale"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Male"
-                                android:fontFamily="@font/handosoftbold"
-                                android:textColor="@color/white"
+                                android:layout_marginRight="@dimen/_10sdp"
                                 android:buttonTint="@color/white"
-                                android:layout_marginRight="@dimen/_10sdp" />
+                                android:fontFamily="@font/handosoftbold"
+                                android:text="Male"
+                                android:textColor="@color/white" />
+
                             <RadioButton
                                 android:id="@+id/rbFemale"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Female"
+                                android:buttonTint="@color/white"
                                 android:fontFamily="@font/handosoftbold"
-                                android:textColor="@color/white"
-                                android:buttonTint="@color/white"/>
+                                android:text="Female"
+                                android:textColor="@color/white" />
                         </RadioGroup>
                     </LinearLayout>
                 </LinearLayout>
