--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primaryblue">
+    android:background="@color/fontblue">
 
     <LinearLayout
         android:id="@+id/linearback"
@@ -128,6 +128,7 @@
                     android:src="@drawable/account" />
 
                 <TextView
+                    android:id="@+id/account"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/handosoftbold"
@@ -138,30 +139,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginBottom="@dimen/_17sdp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/_20sdp"
-                    android:src="@drawable/language" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/handosoftbold"
-                    android:gravity="center_vertical"
-                    android:text="Language"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_13sdp" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -178,6 +155,7 @@
                     android:src="@drawable/speaking" />
 
                 <TextView
+                    android:id="@+id/ttsvoice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/handosoftbold"
@@ -203,6 +181,7 @@
                     android:src="@drawable/lock" />
 
                 <TextView
+                    android:id="@+id/passcode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/handosoftbold"
@@ -236,6 +215,7 @@
                     android:src="@drawable/feedback" />
 
                 <TextView
+                    android:id="@+id/feedback"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/handosoftbold"
@@ -261,6 +241,7 @@
                     android:src="@drawable/about" />
 
                 <TextView
+                    android:id="@+id/about"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/handosoftbold"
@@ -278,10 +259,9 @@
             android:id="@+id/logout"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_40sdp"
-            android:text="Log out"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            />
+            android:text="Log out" />
     </RelativeLayout>
 
 
