--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,9 +3,9 @@
 <!-- Base application theme. -->
 <style name="Theme.Laya" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/blue</item>
+    <item name="colorPrimary">@color/fontblue</item>
     <item name="android:windowIsTranslucent">true</item>
-    <item name="colorPrimaryVariant">@color/primaryblue</item>
+    <item name="colorPrimaryVariant">@color/fontblue</item>
     <item name="colorOnPrimary">@color/white</item>
     <!-- Secondary brand color. -->
     <item name="colorSecondary">@color/teal_200</item>
